crates/java-syntax/tests/snapshots/parser_events__parse_type_parameters_generic_constructor.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
class A { <T> A() {} }

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
IDENTIFIER "A"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(CONSTRUCTOR_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
StartNode(TYPE_PARAMETERS, forward_parent=None)
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
FinishNode
AddToken
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
AddToken
FinishNode
StartNode(BLOCK, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
