crates/java-syntax/tests/snapshots/parser_events__parse_type_parameters_with_intersection_bound.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
interface A<T extends B & C> {}

TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "B"
WHITESPACE " "
BIT_AND "&"
WHITESPACE " "
IDENTIFIER "C"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(INTERFACE_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(TYPE_PARAMETERS, forward_parent=None)
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
StartNode(TYPE_BOUND, forward_parent=None)
AddToken
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
Tombstone
FinishNode
AddToken
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
Tombstone
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
StartNode(INTERFACE_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
